Commit after refferal indication

--- a/app/views/specs/_form.html.erb
+++ b/app/views/specs/_form.html.erb
@@ -109,7 +109,7 @@
     <%= f.text_field :teller_number %>
   </p>
   <p>
-    <%= f.label :referral %><br />
+    <%= f.label :referral %><span id="referral_reminder"> Please enter the name of the referrer that informed you! </span><br />
     <%= f.text_field :referral %>
   </p>
   <p>
