Commit after membership role

--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -38,8 +38,8 @@
             <%= link_to "Edit basic info", edit_user_path(:current) %> or
             <%= link_to "Logout", logout_path %>
           <% else %>
-            <%= link_to "Sign Up As A StakeOn2 Marketer", new_user_path %> or
-            <%= link_to "Login As A StakeOn2 Marketer", login_path %>
+            <%= link_to "Sign Up As A StakeOn2 Member", new_user_path %> or
+            <%= link_to "Login As A StakeOn2 Member", login_path %>
           <% end %>
         <!-- end #user_nav --></div>
       <!-- end #header_title --></div>
