--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,7 +24,7 @@
             <div id="content_body">
 
               <div id="already_have_account">
-                Already have an account? <%= link_to "Login As A StakeOn2 Marketer", login_path %>
+                Already have an account? <%= link_to "Login As A StakeOn2 Member", login_path %>
               <!-- end #already_have_account --></div>
 
               <%= render :partial => 'form' %>
